[package]
name = "collider"
version = "0.1.2"
authors = ["BoxMrChen <boxmrchen@fastmail.com>"]
readme      = "README.md"
repository  = "https://github.com/nishuzumi/collider"
edition = "2021"

[workspace]
members = ['atomicals-electrumx']

[[bin]]
name = "collider"
path = "src/main.rs"

[dependencies]
atomicals-electrumx = {version = "0.2.1", path = 'atomicals-electrumx' }
bitcoin = "0.31.1"
eyre = "0.6.12"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
lazy_static = "1.4.0"
options = "0.5.3"
structopt = "0.3.26"
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.8.5"
ciborium = "0.2.2"
ring = "0.17.8"
rayon = "1.9.0"
dotenvy = "0.15.7"
hex = "0.4.3"
log = "0.4.21"
indicatif = { version = "0.17.8",features = ["improved_unicode"] }
ocl = { version = "0.19.6" }
colored = "2.0.0"